feat: 단축키 기능 추가
- manifest 내 command 기능 통해 최대 4개까지 단축키 기능 지원

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -55,5 +55,11 @@
   },
   "DefaultFolderName": {
     "message": "Default"
+  },
+  "favoriteSnippetText1": {
+    "message": "Add your favorite snippets and use"
+  },
+  "favoriteSnippetText2": {
+    "message": "for instant access."
   }
 }
