feat: 즐겨찾기 contextMenu 구현
- contextMenu에 즐겨찾기 폴더 추가하였습니다.
- manifest 내 version 수정하였습니다.

--- a/public/_locales/ko/messages.json
+++ b/public/_locales/ko/messages.json
@@ -61,5 +61,8 @@
   },
   "favoriteSnippetText2": {
     "message": "키로 빠르게 입력해보세요."
+  },
+  "favoriteSnippetTitle": {
+    "message": "즐겨찾기"
   }
 }
