--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -61,5 +61,8 @@
   },
   "favoriteSnippetText2": {
     "message": "for instant access."
+  },
+  "favoriteSnippetTitle": {
+    "message": "Favorites"
   }
 }
