feat: 단축키 변경 및 단축키 설정 log 추가
- 즐겨찾기 단축키 관련 UI 문구를 변경하였습니다.
- 기존 단축키를 Alt + A,S,Z,X로 변경하였습니다.
- README 파일을 업데이트 하였습니다.

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -62,7 +62,13 @@
   "favoriteSnippetText2": {
     "message": "for instant access."
   },
+  "favoriteSnippetText3": {
+    "message": "Customize your shortcuts on the following page."
+  },
   "favoriteSnippetTitle": {
     "message": "Favorites"
+  },
+  "addFavoriteSnippet": {
+    "message": "Add"
   }
 }
